--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "openai": "^4.56.0",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
