--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "class-variance-authority": "^0.7.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "openai": "^4.56.0",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
@@ -28,6 +31,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.24.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "framer-motion": "^11.3.28",
