--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
@@ -21,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
+    "styled-jsx": "^5.1.6",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
