--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@supabase/supabase-js": "^2.45.1",
     "class-variance-authority": "^0.7.0",
+    "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "openai": "^4.56.0",
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
