--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/openai": "^0.2.7",
+    "@langchain/pinecone": "^0.0.9",
     "@mui/material": "^5.16.7",
+    "@pinecone-database/pinecone": "^3.0.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -23,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "langchain": "^0.2.16",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -32,9 +36,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "sonner": "^1.5.0",
+    "styled-jsx": "^5.1.6",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "styled-jsx": "^5.1.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
