--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.45.1",
     "class-variance-authority": "^0.7.0",
     "dotenv": "^16.4.5",
@@ -33,9 +35,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "sonner": "^1.5.0",
+    "styled-jsx": "^5.1.6",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "styled-jsx": "^5.1.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
