--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "sonner": "^1.5.0",
     "styled-jsx": "^5.1.6",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.24.0",
     "eslint": "^8",
